# fox-oo-proto

./: Cargo.toml  README.md  README_PT-BR.md
src/: entity.rs  main.rs  position.rs
src/tile/: house_tile.rs  mod.rs
